objects/Product_Agreement__c.object
<CustomObject>
    <description>Object contains the union between Deal Product and Agreement Templates (many-to-many)</description>
    <fields>
        <fullName>Agreement_Template_Code__c</fullName>
        <formula>Agreement_Template__r.Template_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Template Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Template__c</fullName>
        <label>Agreement Template</label>
        <referenceTo>Agreement_Template__c</referenceTo>
        <relationshipLabel>Product Agreements</relationshipLabel>
        <relationshipName>Product_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product_Level_2__c</referenceTo>
        <relationshipLabel>Product Agreements</relationshipLabel>
        <relationshipName>Product_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMG_Product_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TMG Product Level 3</label>
        <referenceTo>TMG_Product_Level_3__c</referenceTo>
        <relationshipLabel>Product Agreements</relationshipLabel>
        <relationshipName>Product_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Agreement</label>
    <nameField>
        <label>Product Agreement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>